[tool.poetry]
name = "palworld-fix-uuid"
version = "0.1.2"
description = ""
authors = ["Wonjoon Seol <wonjoon.seol@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
palworld-fix-uuid = "palworld_fix_uuid.main:app"

[tool.poetry.dependencies]
python = "^3.10"
palworld-save-tools = "^0.23.0"
typer = {extras = ["rich"], version = "^0.12.3"}
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/wonjoonSeol-WS/Palworld-fix-uuid"
Issues = "https://github.com/wonjoonSeol-WS/Palworld-fix-uuid/issues"
